Update duplicate check in DuplicateContactMatcher